New upstream version 3.7.1